<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KaKaoTalk Backup</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">BackUp</string>
    <string name="title_section2">Restore</string>
    <string name="title_section3">Developer</string>
    <string name="backupbtn">카카오톡 백업</string>
    <string name="restorebtn">카카오톡 복구</string>
    <string name="mkdir">ㄱㄱ</string>
    <string name="first">최초 실행시 눌러주세요. --></string>
    <string name="somac">SoMac Dev.</string>
    <string name="devname">Schrws, Sica</string>
    <string name="version">Version 1.1</string>

</resources>
